BuildHughes/translation-tool/inputs/source_meta/objects/Program__c.object
<CustomObject>
    <description>Customer Campaigns contain sets of Packages in the Hughes Catalog.</description>
    <fields>
        <fullName>Brand_LE_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand / LE Account</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Customer Program can have Brand of Record Type type Brand or LE or Partner.</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Partner</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Programs</relationshipLabel>
        <relationshipName>Catalog_Pricebook</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <description>What is the franchise brand using this program?</description>
        <inlineHelpText>What is the franchise brand using this program?</inlineHelpText>
        <label>Brand</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Chevron</fullName>
                </value>
                <value>
                    <fullName>ExxonMobil</fullName>
                </value>
                <value>
                    <fullName>KFC</fullName>
                </value>
                <value>
                    <fullName>Long John Silvers</fullName>
                </value>
                <value>
                    <fullName>Pizza Hut</fullName>
                </value>
                <value>
                    <fullName>Taco Bell</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Charging_Rule__c</fullName>
        <label>Charging Rule</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Consumer</fullName>
                </value>
                <value>
                    <fullName>Service Activation AND Departure Complete</fullName>
                </value>
                <value>
                    <fullName>Service Activation OR Departure Complete</fullName>
                </value>
                <value>
                    <fullName>Service Activation Only</fullName>
                </value>
                <value>
                    <fullName>Departure Complete Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Contract management and storage.</description>
        <inlineHelpText>Lookup to Contract management and storage.</inlineHelpText>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipName>Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Program_Name_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>Customer Program Name External ID</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DSS_Program_Code__c</fullName>
        <label>DSS Program Code</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DSS_Program_Name__c</fullName>
        <description>Program name listed in DSS.</description>
        <inlineHelpText>Program name listed in DSS.</inlineHelpText>
        <label>DSS Program Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GL_Segment__c</fullName>
        <label>GL Segment</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRGM_SFDC_CTLG_ID_c__c</fullName>
        <label>PRGM_SFDC_CTLG_ID__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_ID__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Customer Program</label>
    <nameField>
        <label>Customer Program Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Programs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Unchange_Dss_program_code</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED(DSS_Program_Code__c)</errorConditionFormula>
        <errorDisplayField>DSS_Program_Code__c</errorDisplayField>
        <errorMessage>Dont have the permission to edit this field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Unchange_Dss_program_name</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED( DSS_Program_Name__c )</errorConditionFormula>
        <errorDisplayField>DSS_Program_Name__c</errorDisplayField>
        <errorMessage>Dont have the permission to edit this field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ValidatingCustomerProgram_Status</fullName>
        <active>true</active>
        <description>SFDC shall have a validation to not allow change of Customer Program&apos;s status if it is set to active once.</description>
        <errorConditionFormula>AND(ISPICKVAL(PRIORVALUE(Status__c),&quot;Active&quot;),NOT(ISNEW()),
 ISCHANGED(Status__c) )</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>Status cannot be changed if it is made as Active</errorMessage>
    </validationRules>
</CustomObject>